--- a/style.css
+++ b/style.css
@@ -1,17 +1,66 @@
 body{
+    margin: 0;
+    padding: 0;
+}
+
+.container{
     display: grid;
     grid-template-columns: 1fr 4fr;
 }
 
 .header{
-    display: grid;
     grid-column: 2 / 3;
+    display: grid;
+    grid-template: 1fr 1fr / 2fr 1fr
 }
 
+.user-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr 5fr ;
+    align-content: center;
+}
+
+.icon{
+    justify-self: center;
+    align-self: center;
+}
+
+.blue-buttons{
+    display: grid;
+    align-content: center;
+    grid-template-columns: 1fr 1fr 1fr ;
+}
+
+.blue-buttons button{
+    background-color: #008CBA;
+    width: 100px;
+    height: 35px;
+    border-radius: 30px;
+    border: none;
+}
+
+input{
+    width: 70%;
+    border-radius: 25px;
+}
+
+.search{
+    margin-left: 5%;
+}
+
+
 .side-content{
-    grid-row: 1 / 4;
+    grid-row: 1 / 3;
     background: blue;
     color: aliceblue;
+    display: grid;
+    grid-template-rows: 1fr 4fr 3fr;
+    padding-left: 30px;
+}
+
+.one-line {
+    display: grid;
+    grid-template-columns: 1fr 6fr;
 }
 
 .main{
@@ -20,12 +69,23 @@ body{
     background: lightblue;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 15px;
+
 }
 
-.left {
+.left{
+    display: grid;
+    grid-template-rows: 1fr 5r;
+}
+
+.left h3{
+    padding-left: 15px;
+}
+
+.cards{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 15px;
+    padding-left: 15px;
 }
 
 .main .card{
@@ -48,6 +108,16 @@ body{
 
 .right{
     display: grid;
+    padding-right: 15px;
+    padding-bottom: 15px;
+}
+
+.announcements > *{
+ margin-left: 15px;
+}
+
+.trending > *{
+    margin-left: 15px;
 }
 
 .card, .announcements, .trending{
