--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 
 .container{
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 3fr;
 }
 
 .header{
@@ -20,15 +20,28 @@ body{
     align-content: center;
 }
 
+.greeting{
+    display: grid;
+    margin-left: 5%;
+    grid-template-columns: 1fr 15fr;
+}
+
+.top-icon{
+    justify-self: center;
+    align-self: center;
+}
+
 .icon{
     justify-self: center;
     align-self: center;
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
 }
 
 .blue-buttons{
     display: grid;
     align-content: center;
     grid-template-columns: 1fr 1fr 1fr ;
+    gap: 15px;
 }
 
 .blue-buttons button{
@@ -37,6 +50,7 @@ body{
     height: 35px;
     border-radius: 30px;
     border: none;
+    color: white;
 }
 
 input{
@@ -54,8 +68,8 @@ input{
     background: blue;
     color: aliceblue;
     display: grid;
-    grid-template-rows: 1fr 4fr 3fr;
-    padding-left: 30px;
+    grid-template-rows: 1fr 3fr 4fr;
+    padding-left: 4%;
 }
 
 .one-line {
@@ -74,7 +88,11 @@ input{
 
 .left{
     display: grid;
-    grid-template-rows: 1fr 5r;
+    grid-template-rows: 1fr 10fr;
+}
+
+.left h3{
+    margin-bottom: 0;
 }
 
 .left h3{
@@ -86,20 +104,28 @@ input{
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 15px;
     padding-left: 15px;
+    margin-bottom: 5%;
 }
 
 .main .card{
     background-color: #f1f1ea;
     color: black;
-    text-align: center;
+    text-align: left;
+    padding-left: 15px;
     height: 200px;
+    border-radius: 10px;
+}
+
+.card img{
+    float: right;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .card p {
     color: black;
     font-weight: normal;
     font-size: 14px;
-    padding: 5px;
   }
 
 .left{
@@ -108,12 +134,20 @@ input{
 
 .right{
     display: grid;
-    padding-right: 15px;
-    padding-bottom: 15px;
+    padding-right: 15%;
+    padding-bottom: 10%;
+}
+
+.announcements{
+    border-radius: 10px;
 }
 
 .announcements > *{
  margin-left: 15px;
+}
+
+.trending{
+    border-radius: 10px;
 }
 
 .trending > *{
